# zero-memory

./: CMakeLists.txt  README.md
cmake/: compiler.cmake  libs.cmake  options.cmake
cmd/windows/: clone_dependencies.bat
src/lib/: CMakeLists.txt
src/lib/core/: core.cmake
src/lib/core/private/zero/core/memory/: DefaultMemory.cpp  MemoryManager.cpp
src/lib/core/public/zero/core/memory/: DefaultMemory.hpp  IPointer.hxx  MemoryManager.hpp  UniquePointer.hpp
src/lib/windows/: windows.cmake
src/tests/: CMakeLists.txt  core_test.cpp  memory_tests.cpp  unique_ptr_tests.cpp
